--- a/csssandbox/csssandbox_finished/03_fonts.html
+++ b/csssandbox/csssandbox_finished/03_fonts.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <title>Fonts</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
