--- a/CSS_8.1-8.3_positioning/task_8.1_positioning.html
+++ b/CSS_8.1-8.3_positioning/task_8.1_positioning.html
@@ -10,6 +10,8 @@
         width: 100px;
         height: 100px;
         background: darkcyan;
+        margin: 50px;
+        position: relative;
       }
       #inner {
         width: 50px;
@@ -22,7 +24,7 @@
   </head>
   <body>
     <!--Answer question one:
-    The problem: the parent div (the outer one) has 50px margin from the top (same size of inner div) -->
+    The problem: the parent div (the outer one) has 50px margin from the top (same size of inner div) and is set as default as static. -->
 
     <!--code fix-->
     <div id="outer">
