--- a/CSS_8.1-8.3_positioning/task_8.2_positioning.html
+++ b/CSS_8.1-8.3_positioning/task_8.2_positioning.html
@@ -17,17 +17,14 @@
         width: 50px;
         height: 50px;
         background: lightgreen;
-        position: absolute;
+        position: relative;
         top: 10px;
       }
     </style>
   </head>
   <body>
-    <!--Answer question one:
-    The problem: the parent div (the outer one) has 50px margin from the top (same size of inner div) and is set as default as static. -->
-
-    <!--code fix-->
     <div id="outer">
+      Box titles
       <div id="inner"></div>
     </div>
   </body>
