commit_02_about_hotel

--- a/Hotel_website_project/Eyal_hotel_website/about.html
+++ b/Hotel_website_project/Eyal_hotel_website/about.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Welcome to the most extraordinary hotel in Boston"
-    />
+    <meta name="description" content="Welcome to the most extraordinary hotel in Boston"/>
     <meta name="keywords" content="hotel, boston hotel, new england hotel" />
-    <link
-      rel="stylesheet"
-      href="/Hotel_website_project/Eyal_hotel_website/css/style.css"
-    />
+    <link rel="stylesheet" href="/css/style.css">
     <title>Hotel BT | About</title>
   </head>
+
   <body>
     <header>
       <nav id="navbar">
