--- a/Hotel_website_project/Eyal_hotel_website/index.html
+++ b/Hotel_website_project/Eyal_hotel_website/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="hotel, boston hotel, new england hotel" />
     <link
       rel="stylesheet"
-      href="/Hotel_website_project/Eyal_hotel_website/css/style.css"
+      href="/css/style.css"
     />
     <title>Hotel BT | Welcome</title>
     <script
