--- a/CSS_advanced_selectors_12.1-12.5/done_assignments/12.2.html
+++ b/CSS_advanced_selectors_12.1-12.5/done_assignments/12.2.html
@@ -11,19 +11,26 @@
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 62.5%;
-            font-size: 1rem;
+            font-size: 2rem;
         }
-        a {
-            text-decoration: none;
+        .box {
+            background: rebeccapurple;
+            position: relative;
+            width: 10rem;
+            height:10rem; 
         }
-        a::after{
-            content:" (https://www.google.com/)"
+
+        .box::after {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width:50%;
+            background:blue;
         }
 
     </style>
 </head>
 <body>
-    <p>Please visit this<a href="https://www.google.com/" target="_blank"> website</a> for more information.</p>
-    
+    <div class="box"></div>    
 </body>
 </html>
