--- a/CSS_advanced_selectors_12.1-12.5/done_assignments/12.4_nop.html
+++ b/CSS_advanced_selectors_12.1-12.5/done_assignments/12.4_nop.html
@@ -32,6 +32,9 @@
             background:blue;
             color: #f4f4f4;
             z-index: 2;
+            border-width: 3px 0 0 3px;
+            border-color: red;
+
         }
         .box::before {
             content: '';
